--- a/package.json
+++ b/package.json
@@ -15,9 +15,14 @@
     "react-detect-offline": "^2.4.5",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "react-icons": "^4.7.1",
+    "react-particles": "^2.8.0",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
+    "react-tsparticles": "^2.7.1",
     "sass": "^1.57.1",
+    "sweetalert2": "^11.7.0",
+    "tsparticles": "^2.8.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
