--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "four",
+  "homepage": "https://saidelhosiny.github.io/e-commerce",
+  "name": "e-commerce",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -9,18 +10,32 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.1",
     "bootstrap": "^5.2.3",
-    "joi": "^17.7.0",
+    "formik": "^2.4.5",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-detect-offline": "^2.4.5",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^4.7.1",
+    "react-loader-spinner": "^6.1.6",
+    "react-particles": "^2.8.0",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
+    "react-tsparticles": "^2.7.1",
     "sass": "^1.57.1",
-    "web-vitals": "^2.1.4"
+    "sass-loader": "^14.1.0",
+    "slick-carousel": "^1.8.1",
+    "sweetalert2": "^11.7.0",
+    "tsparticles": "^2.8.0",
+    "web-vitals": "^2.1.4",
+    "yup": "^1.3.3"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -43,5 +58,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.1.1"
   }
 }
